# cambrinary

./: .gitignore  Conf.py  README.md  cambrinary.py  color.py  conf.json  country_const.py  log.py  publish-requirements.txt  pyproject.toml  requirements.txt  type.py
cambrinary/: Conf.py  __init__.py  cambrinary.py  color_const.py  conf.json  country_const.py  log.py  note.py  requirements.in  requirements.txt  type.py
images/: hello  hello-world  world
test/: async_test.py  test.py  test_case.json
